# RGB-D-odometry

./: CMakeLists.txt  README.md  parameters.txt
data/: result.pcd  关于数据的说明
include/include/: slamBase.h
src/: CMakeLists.txt  RGBD_VO.cpp  slamBase.cpp  testCloud.cpp  testEstimation.cpp  testORB.cpp  testPnpG2o.cpp  testR.cpp
